Fixes margin-top on mobile

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -82,8 +82,8 @@ footer img {
     width: 270px;
   }
 
-  header {
-    margin-top: 55px;
+  header h1{
+    margin-top: 85px;
   }
 
   .content .first-links{
